--- a/_posts/2015-09-08-ml-python.markdown
+++ b/_posts/2015-09-08-ml-python.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:	"Implementing machine learning algorithms with python"
+title:	"Implementing machine learning algorithms with Python"
 date:	2015-09-08
 tags:	[machine learning, coursera]
 ---
@@ -15,4 +15,4 @@ notebooks in my [ml-python](https://github.com/jonchar/ml-python) repo.
 
 I've already implemented [Linear Regression](https://jonchar.github.io/Linear-Regression)
 and [Logistic Regression](https://jonchar.github.io/Logistic-Regression)
-but have a few more in the works, namely K-means clustering and artificial neural networks. Stay tuned!
+but have a few more in the works, namely k-means clustering and artificial neural networks. Stay tuned!
