--- a/_posts/2015-09-08-ml-python.markdown
+++ b/_posts/2015-09-08-ml-python.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:	"Implementing machine learning algorithms with Python"
 date:	2015-09-08
-tags:	[machine learning, coursera]
+tags:	[machine learning, coursera, python]
 ---
 
 After taking Andrew Ng's machine learning course through Coursera, I've decided
@@ -13,6 +13,18 @@ will be good practice to help the concepts sink in. I'll be writing up each
 algorithm along with the associated theory and an example in IPython
 notebooks in my [ml-python](https://github.com/jonchar/ml-python) repo.
 
-I've already implemented [Linear Regression](https://jonchar.github.io/Linear-Regression)
-and [Logistic Regression](https://jonchar.github.io/Logistic-Regression)
-but have a few more in the works, namely k-means clustering and artificial neural networks. Stay tuned!
+As of wrting this post, I've already implemented linear regression
+and logistic regression but have a few more in the works, namely
+k-means clustering and artificial neural networks. Stay tuned and I'll
+update this post as I add them.
+
+Current Implementations:
+
+* **[Linear Regression](/Linear-Regression)**
+* **[Logistic Regression](/Logistic-Regression)**
+* **[K-Means](/k-means)** (Added Sep 9, 2015)
+
+Upcoming Implementations:
+
+* Artificial Neural Networks
+* Support Vector Machines
