--- a/_posts/2015-09-12-k-means.markdown
+++ b/_posts/2015-09-12-k-means.markdown
@@ -5,11 +5,15 @@ date:	2015-09-13
 tags:	[python, k-means, unsupervised learning]
 ---
 
-The latest addition to my [ml-python](https://github.com/jonchar/ml-python)
-repository is a [simple implementation](https://jonchar.github.io/k-means)
-of the [*k*-means](https://en.wikipedia.org/wiki/K-means_clustering)
+The latest addition in my quest to implement common machine
+learning algorithms in python is a simple implementation of the [*k*-means](https://en.wikipedia.org/wiki/K-means_clustering)
 unsupervised learning algorithm. It is a straightforward implementation
 using numpy arrays that we test on some data generated with [scikit-learn](http://scikit-learn.org/stable/modules/classes.html#samples-generator).
 This algorithm is a popular and simple way to detect clusters within your
 data set, but it is not without it's limitations.
 I'll explore that in another post to come!
+
+As usual, you can find the jupyter notebook in my [ml-python repo](https://github.com/jonchar/ml-python)
+if you'd like to follow along, or rendered in HTML here:
+
+**[*k*-means implemented in Python](/k-means)**
